# dev-dhanushkumar.github.io

./: .gitignore  .nojekyll  CNAME  Cargo.toml  README.md  Trunk.toml  astro.config.mjs  index.html  package-lock.json  package.json  tailwind.config.mjs
.github/workflows/: deploy.yml
docs/: CNAME  dev-dhanushkumar-protfolio-a1b7cbd3d597dbdf.js  dev-dhanushkumar-protfolio-a1b7cbd3d597dbdf_bg.wasm  index.html  tailwind.css
docs/blog/2024-10-19-mastering-arraylist/: index.md
docs/blog/2024-12-21-todo-cli-tool/: index.md
docs/blog/2025-03-08-basic-of-webgpu-part1/: index.md
src/: consts.ts  lib.rs  main.rs  utils.rs
src/components/: Author.astro  Hero.astro  ProjectList.astro  about_the_author.rs  blog_post_detail_view.rs  markdown_to_html_view.rs  mod.rs  post_by_year.rs  post_item.rs  project_list.rs  prose.rs  table_of_content.rs
src/components/widgets/: AboutTheAuthor.astro
src/content/: blog.rs
src/content/blog/2024-10-08-mastering-oops/: index.md
src/content/blog/2024-10-19-mastering-arraylist/: index.md
src/content/blog/2024-12-21-todo-cli-tool/: index.md
src/layouts/: BaseLayout.astro  base_header.rs  header.rs  hyper_link.rs  mod.rs
src/layouts/components/: BaseHead.astro  Footer.astro  Header.astro
src/pages/: about.astro  about.rs  blog_post_detail.rs  home.rs  index.astro  mod.rs  not_found.rs  posts.rs  projects.rs  tags.rs
src/pages/projects/: index.rs  mod.rs  projects.rs  projects.ts
src/pages/tags/: index.rs  mod.rs  tags.rs
src/styles/: global.css
static/: 404.html
style/: input.css
(+3 files in other folders)
