[package]
name = "dev-dhanushkumar-protfolio"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.2", features = ["csr"] }
leptos_meta = "0.8.2"
leptos_router = { version = "0.8.2", features = ["nightly"] }
console_log = "1.0.0"
log = "0.4.27"
console_error_panic_hook = "0.1.7"
leptos-use = "0.15.7"
js-sys = "0.3.77"
serde_json = "1.0.140"

[package.metadata.leptos]
ssr = false


[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
panic = "abort"
